--- a/app/views/errors/forbidden.html.erb
+++ b/app/views/errors/forbidden.html.erb
@@ -3,7 +3,7 @@
   <p>
     <%=
     case @exception
-    when ApplicationController::IpAdressRejected
+    when ApplicationController::IpAddressRejected
       "あなたのIPアドレス（#{request.ip}）からは利用できません。"
     else
       '指定されたベージを閲覧する権限がありません。'
