--- a/app/assets/stylesheets/staff/form.css.scss
+++ b/app/assets/stylesheets/staff/form.css.scss
@@ -25,6 +25,10 @@ div#wrapper {
           }
           input[type='checkbox']+label { display: inline-block }
           input[type='radio']+label { display: inline-block }
+          span.instruction { font-size: $small; color: $dark_gray; }
+        }
+        div.input-block {
+          input { margin-right: $narrow * 2; }
         }
         div.notes {
           text-align: right;
@@ -47,6 +51,10 @@ div#wrapper {
           color: $red;
           font-size: $small;
           padding: 0 $very_wide;
+        }
+        div.with-errors {
+          label { color: $red; }
+          input, select { background-color: $pink; }
         }
       }
     }
