--- a/baukis-learning/app/views/staff/messages/show.html.erb
+++ b/baukis-learning/app/views/staff/messages/show.html.erb
@@ -18,7 +18,7 @@
     <tr>
       <th>タグ</th>
       <td>
-        <%= markup(:ul, id: 'tag-it') do |m|
+        <%= markup(:ul, id: 'tag-it', 'data-message-id' => @message.id) do |m|
           @message.tags.each do |tag|
             m.li tag.value
           end
