--- a/baukis-learning/app/views/staff/messages/show.html.erb
+++ b/baukis-learning/app/views/staff/messages/show.html.erb
@@ -2,6 +2,8 @@
 <h1><%= @title %></h1>
 
 <div class="table-wrapper">
+  <%= render 'links' %>
+  
   <table class="attributes">
     <% if @message.kind_of?(CustomerMessage) %>
       <div class="links">
