--- a/baukis-learning/app/views/staff/messages/index.html.erb
+++ b/baukis-learning/app/views/staff/messages/index.html.erb
@@ -9,6 +9,8 @@ end
 <h1><%= @title %></h1>
 
 <div class="table-wrapper">
+  <%= render 'links' %>
+  
   <%= paginate @messages %>
   
   <table class="listing">
@@ -40,4 +42,6 @@ end
   </table>
 
   <%= paginate @messages %>
+  
+  <%= render 'tags' %>
 </div>
